Formalize tracking current overcharge count to the actual charge class, let each type of casting decide how to increment it, and use it to drive animations.